Fix exception overflow display (closes #503)

--- a/webapp/app/styles/utils.scss
+++ b/webapp/app/styles/utils.scss
@@ -67,3 +67,7 @@ $margin-large: 2em;
 .visibility-hidden {
     visibility: hidden;
 }
+
+.overflow-scroll {
+    overflow: scroll !important;
+}
